examples/test/testpolicy9325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9325
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key20: value30
      key36: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value47
      podSelector:
        matchLabels:
          key24: value7
          key17: value33
